added new promt for real services